--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -22,6 +22,7 @@
     "test": "npx hardhat test"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.8.2"
+    "@openzeppelin/contracts": "^4.8.2",
+    "dotenv": "^16.3.1"
   }
 }
